p3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: wil-app
  ports:
    - protocol: TCP
      port: 8888      
      targetPort: 8888
